Enhance index.html with meta tags for SEO
Added Open Graph and Twitter meta tags for better social sharing.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="Kydras Systems Inc." />
+<meta property="og:description" content="Branded automation, forensic innovation, and legendary polish." />
+<meta property="og:image" content="https://kydras-systems-inc.github.io/assets/kydras-og-preview.png" />
+<meta property="og:url" content="https://kydras-systems-inc.github.io" />
+<meta name="twitter:card" content="summary_large_image" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kydras Systems Inc. — Branded automation, forensic innovation, and legendary developer experience." />
